tests/qd/compile_errors/continue_outside_loop.qd
// Test: continue outside loop

fn main() {
	10 20 add
	continue
	. nl
}
